# Job-Recommendation-LangChain

./: .env.example  README.md  main.py  mcp_server.py  pdf_test.py  pyproject.toml
src/: agent.py  fetch_location.py  job_api.py
